--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AndroidKotlin5_6pmOnline"
         tools:targetApi="31">
         <activity
+            android:name=".AlertDialogActivity"
+            android:exported="false" />
+        <activity
             android:name=".RelativeActivity"
             android:exported="false" />
         <activity
