--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AndroidKotlin5_6pmOnline"
         tools:targetApi="31">
         <activity
+            android:name=".ListViewActivity"
+            android:exported="false" />
+        <activity
             android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
@@ -42,7 +45,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-
+            
         </activity>
     </application>
 
