--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.AndroidKotlin5_6pmOnline"
         tools:targetApi="31">
         <activity
+            android:name=".listpackage.ListBaseAdapterActivity"
+            android:exported="false" />
+        <activity
             android:name=".ProfileActivity"
             android:exported="false" />
         <activity
