--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
             android:name=".location.LocationActivity"
             android:exported="false" />
         <activity
+            android:name=".video_view.PickVideoActivity"
+            android:exported="false" />
+        <activity
             android:name=".firebase.FirestoreActivity"
             android:exported="false" />
         <activity
