--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -17,6 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidKotlin5_6pmOnline"
         tools:targetApi="31">
+        <activity
+            android:name=".video_view.ExoPlayerVideoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".video_view.VideoViewActivity"
+            android:exported="false" />
         <activity
             android:name=".location.LocationActivity"
             android:exported="false" />
