--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,7 +90,13 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="false" />
+        <activity
+            android:name=".maps_implementation.MapsActivity"
+            android:exported="false" />
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="${MY_SECRET_KEY}"/>
     </application>
 
 </manifest>
